Legacy versions redirect - Redirecting legacy links to legacy reader - Redirecting to legacy reader when opening a legacy gp version - Minor CSS fix for light/dark mode differences

--- a/src/App.css
+++ b/src/App.css
@@ -26,8 +26,8 @@
 
 .controls {
   position: absolute;
-  right: 50px;
-  bottom: 30px;
+  right: 35px;
+  bottom: 15px;
   display: flex;
   gap: 30px;
   align-items: center;
